server/public/stylesheets/rocketrides.css
/* ... */
.form p {
  margin: 0 0 30px;
  font-size: 17px;
  color: #8798AB;
  text-align: center;
  animation: slide-in-vertical 0.5s cubic-bezier(0.230, 1.000, 0.320, 1.000) both 0.6s;
}

.form p.error {
  color: #FC7455;
}

.form h4 {
  margin: 15px 0;
  color: #8798AB;
  font-size: 16px;
  font-weight: 500;
  animation: slide-in-vertical 0.5s cubic-bezier(0.230, 1.000, 0.320, 1.000) both 0.5s;
}

fieldset {
  animation: slide-in-vertical 0.5s cubic-bezier(0.230, 1.000, 0.320, 1.000) both 0.55s;
}

.form input[type="submit"],
.form button,
.form a.button {
  text-align: center;
  animation: slide-in-vertical 0.5s cubic-bezier(0.230, 1.000, 0.320, 1.000) both 0.6s;
}

.form label {
  display: block;
  width: 100%;
  margin-top: 10px;
  line-height: 20px;
  font-size: 13px;
  color: #8798AB;
  padding: 0 30px;
  animation: slide-in-vertical 0.5s cubic-bezier(0.230, 1.000, 0.320, 1.000) both 0.65s;
}

.options label {
  padding: 0 40px;
}

.options strong {
  display: inline-block;
  margin-left: 5px;
}

.options span {
  display: block;
  margin-left: 20px;
}

form {
  position: relative;
  width: 100%;
  font-size: 15px;
}

form aside {
  margin: -30px auto 0;
  line-height: 1.3em;
  font-size: 13px;
  text-align: center;
  color: #8798AB;
  animation: slide-in-vertical 0.5s cubic-bezier(0.230, 1.000, 0.320, 1.000) both 0.65s;
}

fieldset {
  position: relative;
  min-width: 0;
  margin-bottom: 40px;
  border-style: none;
  background-color: #FFF;
  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
  border-radius: 5px;
}

fieldset .row {
  display: flex;
  align-items: flex-end;
  position: relative;
  width: 100%;
  padding: 12px 20px 13px;
}

fieldset .row:not(.hidden) ~ .row {
  border-top: 1px solid rgba(0, 0, 0, 0.06);
}

fieldset .row::before {
  content: attr(label);
  width: 130px;
  padding-right: 20px;
  color: #8798AB;
  font-weight: 500;
  text-align: right;
}

fieldset .row.select::after {
  content: "";
  position: absolute;
  width: 9px;
  height: 5px;
  right: 20px;
  top: 50%;
  margin-top: -2px;
  background-image: url(/images/dropdown.svg);
  pointer-events: none;
}

fieldset .row input {
  flex: 1;
  border-style: none;
  font-size: 15px;
  outline: none;
  color: #313B3F;
}

fieldset .row select {
  flex: 1;
  padding-right: 25px;
  border-style: none;
  outline: none;
  -webkit-appearance: none;
  font-size: 15px;
  outline: none;
  color: #313B3F;
  cursor: pointer;
  background: transparent;
}

fieldset .row select:focus {
  color: #00B67C;
}

fieldset .row.date span {
  padding-right: 10px;
  color: #AAB7C5;
  font-weight: 500;
}

fieldset .row.date input {
  flex: 0;
  min-width: 35px;
}

fieldset .row.date input:last-child {
  flex: 1;
}

input[type="submit"],
button,
a.button {
  display: block;
  width: 100%;
  margin: 20px 0;
  padding: 12px 20px;
  border-style: none;
  border-radius: 5px;
  background-color: #13B57D;
  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
  font-size: 17px;
  font-weight: 500;
  color: #FFF;
  cursor: pointer;
  outline: none;
  -webkit-appearance: none;
}

#content a.button::after {
  content: '';
  position: absolute;
  width: 8px;
  height: 13px;
  margin: 5px 10px;
  background: url(/images/arrow-white.svg) right center no-repeat;
}

input[type="submit"].secondary {
  color: #313B3F;
  background: #FFF;
}

input[type="submit"].secondary:active {
  background: #F5F6F7;
}

button:hover,
a.button:hover {
  text-decoration: none;
}

input[type="submit"]:active,
button:active,
a.button:active {
  background-color: #01966F;
}

header button,
header a.button,
header input[type="submit"] {
  margin: 15px 0 0;
  padding: 0 16px;
  height: 36px;
  line-height: 36px;
  background-color: #FFF;
  color: #13B57D;
  text-align: center;
}

header button:active,
header a.button:active,
header input[type="submit"]:active {
  background-color: #FFF;
  color: #01966F;
}

form a.button {
  text-align: center;
}

/* Illustration */

.illustration,
.illustration .rocket {
  width: 170px;
  height: 170px;
}

.illustration {
  background: #FFF;
  border-radius: 85px;
  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
}

.illustration .rocket {
  background: url(/images/rocketrides-illustration.svg) center center no-repeat;
  background-size: 120px 120px;
  transform: rotate(5deg);
}

.illustration.not-found {
  margin: 50px;
}

.illustration.not-found .rocket {
  transform: rotate(120deg);
}

/* Home */

.intro {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  max-width: 800px;
  padding: 60px 0;
}

.intro .pilots {
  flex-direction: column;
}

.intro h1 {
  font-size: 50px;
  line-height: 45px;
}

.intro h2 {
  margin: 15px 0;
  font-size: 20px;
  font-weight: 400;
  line-height: 24px;
  opacity: 0.8;
}

.intro a.button {
  width: 190px;
  height: 44px;
  margin: 0;
  padding: 0 25px;
  line-height: 44px;
  text-align: left;
  background: #FFF url(/images/arrow-green.svg) 158px 16px no-repeat;
}

.features {
  display: flex;
  width: 100%;
  max-width: 800px;
  margin: 0 auto;
}

.features section {
  flex: 1;
  align-items: left;
  padding: 90px 0 0;
  margin: 20px 40px 0 0;
  background-position: 0 20px;
  background-repeat: no-repeat;
}

.features section.schedule {
  background-image: url(/images/feature-schedule.svg);
}

.features section.earnings {
  background-image: url(/images/feature-earnings.svg);
}

.features section.app {
  background-image: url(/images/feature-app.svg);
}

.features section:last-child {
  margin-right: 0;
}

.features h3 {
  margin: 0 0 10px;
  font-size: 20px;
  font-weight: 500;
  color: #32315E;
}

.features p {
  font-size: 15px;
  line-height: 24px;
  color: #6A7C94;
}

/* User Information */

.user {
  display: flex;
  width: 100%;
  max-width: 800px;
  padding: 40px 0;
}

.user .block {
  position: relative;
}

.user .block + .block {
  margin-left: 40px;
}

.user .block h1 {
  font-size: 30px;
}
/* ... */

